# medical-analysis

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  run.py  run_single_test.py
src/assess/models/: advisor.py  assessors.py  doc_readers.py  llms.py  orchestrator.py
src/assess/models/criteria/: colonoscopy.toml
src/assess/structures/: criteria.py  medical_record.py  prompts.py
src/assess/utils/: retry_tools.py  serialize.py
tests/data/: a_test_json.json  a_test_toml.toml  example_criteria.toml
tests/integration_tests/: test_advisors.py  test_assessor.py  test_doc_readers.py  test_medical_record_object.py  test_orchestrator.py
tests/tools/: data_handler.py
tests/unit_tests/: test_criteria.py  test_retry_tools.py  test_serialize.py
