[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "assess"
version = "0.1.0"
description = "A Python package to assess medical records."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{name = "Ed Collins", email = "edward.g.collins.1995@gmail.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/EdCo95/medical-analysis" }
dependencies = [
    "flake8==7.0.0",
    "black==24.1.0",
    "isort==5.13.2",
    "pre-commit==3.6.0",
    "pytest==7.4.4",
    "tomlkit==0.12.3",
    "loguru==0.7.2"
]

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
